--- a/R/tabelas.html
+++ b/R/tabelas.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Setor de geomensura e cartografia</title>
+    <style>
+        #body{
+            display: flex;
+            color: black;
+        }
+    </style>
 </head>
-<body>
+<body id="body">
 <div>
     <p>Mapas funcionando</p>
     <table>
