--- a/R/tabelas.html
+++ b/R/tabelas.html
@@ -7,6 +7,7 @@
     <style>
         #body{
             display: flex;
+            justify-content: space-between;
             color: black;
         }
     </style>
