--- a/R/tabelas.html
+++ b/R/tabelas.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Setor de geomensura e cartografia</title>
     <style>
-        #body{
-            display: flex;
-            justify-content: space-between;
-            color: black;
+        #todas-tabelas{
+            display: flex !important;
+            justify-content: space-between !important;
+            color: black !important;
         }
     </style>
 </head>
-<body id="body">
-<div>
+<body>
+<div id="todas-tabelas">
     <p>Mapas funcionando</p>
     <table>
     <tr id="cabecalho">
