--- a/R/tabelas.html
+++ b/R/tabelas.html
@@ -10,10 +10,27 @@
             justify-content: space-between !important;
             color: black !important;
         }
+        table{
+            border-color: black;
+            border-style: solid;
+            border-width: 0.1px;
+        }
+        td{
+            border: 1px solid white;
+            background-color: rgb(205, 252, 252);
+        }
+        p{
+            text-align: center;
+            font-size: 20px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-decoration: underline;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
 <div id="todas-tabelas">
+<div >
     <p>Mapas funcionando</p>
     <table>
     <tr id="cabecalho">
@@ -227,6 +244,7 @@
             <td>....</td>
         </tr>
     </table>
+</div>
 </div>
 </body>
 </html>
