--- a/R/tabelas.html
+++ b/R/tabelas.html
@@ -7,7 +7,7 @@
     <style>
         #todas-tabelas{
             display: flex !important;
-            justify-content: space-between !important;
+            justify-content: space-around;
             color: black !important;
         }
         table{
