--- a/R/tabelas.html
+++ b/R/tabelas.html
@@ -11,9 +11,9 @@
             color: black !important;
         }
         table{
-            border-color: black;
-            border-style: solid;
-            border-width: 0.1px;
+            border-color: black !important;
+            border-style: solid !important;
+            border-width: 0.1px !important;
         }
         td{
             border: 1px solid white;
