--- a/R/tabelas.html
+++ b/R/tabelas.html
@@ -10,14 +10,24 @@
             justify-content: space-around;
             color: black !important;
         }
+        #cabecalho-tabela{
+            background-color: #3c8dbc !important;
+            color: white;
+            font-size: x-large;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
         table{
             border-color: black !important;
             border-style: solid !important;
             border-width: 0.1px !important;
         }
         td{
-            border: 1px solid white;
+            border: 1px solid;
+            border-top: transparent;
+            border-bottom: transparent;
+            font-size: 18px;
             background-color: rgb(205, 252, 252);
+            padding: 5px;
         }
         p{
             text-align: center;
@@ -33,9 +43,9 @@
 <div >
     <p>Mapas funcionando</p>
     <table>
-    <tr id="cabecalho">
-        <td>Mapas</td>
-        <td>Fonte</td>
+    <tr >
+        <td id="cabecalho-tabela">Mapas</td>
+        <td id="cabecalho-tabela">Fonte</td>
     </tr>
     <tr>
         <td>Lotes</td>
@@ -191,9 +201,9 @@
 <div>
     <p>Mapas em manutenção</p>
     <table>
-        <tr id="cabecalho">
-            <td>Mapas</td>
-            <td>Fonte</td>
+        <tr>
+            <td id="cabecalho-tabela">Mapas</td>
+            <td id="cabecalho-tabela">Fonte</td>
         </tr>
         <tr>
             <td>Aerodromes</td>
