--- a/R/devs.html
+++ b/R/devs.html
@@ -10,25 +10,6 @@
             justify-content: space-around;
             color: black !important;
         }
-        #cabecalho-tabela{
-            background-color: #3c8dbc !important;
-            color: white;
-            font-size: x-large;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-        table{
-            border-color: black !important;
-            border-style: solid !important;
-            border-width: 0.1px !important;
-        }
-        td{
-            border: 1px solid;
-            border-top: transparent;
-            border-bottom: transparent;
-            font-size: 18px;
-            background-color: rgb(205, 252, 252);
-            padding: 5px;
-        }
         p{
             text-align: center;
             font-size: 20px;
@@ -42,9 +23,11 @@
 <div id="todas-tabelas">
 <div >
     <h1>Equipe Desenvolvedora</h1>
-    <li>
-        <ul>Cássio</ul>
-    </li>
+        <li><p>Alex Valério</p></li>
+        <li><p>Cassio P. A. Antonia</p></li>
+        <li><p>Eduardo L. Moraes</p></li>
+        <li><p>Luisa P. Marques</p></li>
+        <li><p>Rodrigo R. Silva</p></li>
 </div>
 </div>
 </body>
