modified:   R/rsconnect/shinyapps.io/bage/geoinfo.dcf     modified:   R/tabelas.html 	modified:   R/ui.R

--- a/R/tabelas.html
+++ b/R/tabelas.html
@@ -41,7 +41,7 @@
 <body>
 <div id="todas-tabelas">
 <div >
-    <p>Mapas funcionando</p>
+    <p>Mapas Online</p>
     <table>
     <tr >
         <td id="cabecalho-tabela">Mapas</td>
@@ -199,7 +199,7 @@
     </table>
 </div>
 <div>
-    <p>Mapas em manutenção</p>
+    <p>Mapas em manutenção (disponíveis em breve)</p>
     <table>
         <tr>
             <td id="cabecalho-tabela">Mapas</td>
